Add functionality and tests.
