# config/routes.rb
@@ -11,7 +11,7 @@ Rails.application.routes.draw do
       resources :projects do
         resources :tasks, except: %i[index] do
           collection { patch :sort }
-          resources :comments do
+          resources :comments, except: %i[index] do
             resources :images, only: %i[create update]
           end
         end
